- Insensitive filter for searching (include or includeOr operator)

### 2020-04-10 v0.0.46
Changed
- Login via Facebook API

### 2020-04-09 v0.0.45
Changed
- Update npm dependencies

## scheduler

### 2020-07-23 v0.0.10
Added
- Endpoint that returns all services and actions that can be scheduled

### 2020-07-17 v0.0.9
Added
- Endpoint that returns list of jobs

### 2020-07-09 v0.0.8
Changed
- Change schedule job endpoint request body: add job options and required job namespace
- Save job in scheduler database
- Allow to add many jobs with same cron
- Fix canceling jobs endpoint

### 2020-05-12 v0.0.7
Changed
- Fixed missing responses for services

### 2020-04-28 v0.0.6
Changed
- Set WORKDIR to "/app/build/services/scheduler" (before "WORKDIR /app")

### 2020-04-09 v0.0.5
Changed
- Update npm dependencies

## notifications

### 2020-07-29 v0.0.10
Changed
- Send notification endpoint returns `notificationsIds` in the response body

### 2020-05-12 v0.0.9
Changed
- Fixed missing responses for services

### 2020-04-28 v0.0.8
Changed
- Set WORKDIR to "/app/build/services/notifications" (before "WORKDIR /app")

### 2020-04-09 v0.0.7
Changed
- Update npm dependencies

## mailer

### 2020-07-01 v0.0.8
Added
- Batch processing

### 2020-05-12 v0.0.7
Changed
- Fixed missing responses for services

### 2020-04-28 v0.0.6
Changed
- Set WORKDIR to "/app/build/services/mailer" (before "WORKDIR /app")

### 2020-04-09 v0.0.5
Changed
- Update npm dependencies

## gateway

### 2020-04-28 v0.0.4
Changed
- Bugfix. Possible race condition when check permissions
- Set WORKDIR to "/app/build/services/gateway" (before "WORKDIR /app")

Bugfix
- Possible race condition when check permissions

### 2020-04-09 v0.0.2
Changed
- Update npm dependencies

## pdf

### 2020-05-29 v0.0.1
Added
- Pdf service provides a ready-to-use rendering HTML content from URL or HTML string, which can be used to convert HTML to PDF.

## Main project

### 2020-04-09
Changed
- Update Dockerfile - node:12.16.1-alpine