@@ -2,6 +2,7 @@ import * as express from "express";
 import { CommandBus } from "../../../../../../shared/command-bus";
 
 import { sendAction, sendActionValidation } from "./actions/send.action";
+import { getNotificationsAction, getNotificationsActionValidation } from "./actions/get-notifications.action";
 // COMMAND_IMPORTS
 
 export interface NotificationsRoutingProps {
@@ -12,7 +13,8 @@ export const notificationsRouting = ({ commandBus }: NotificationsRoutingProps) 
   const router = express.Router();
 
   router.post("/send", [sendActionValidation], sendAction({ commandBus }));
-  // COMMANDS_SETUP
+  router.get('/get-notifications', [getNotificationsActionValidation], getNotificationsAction({commandBus}));
+// COMMANDS_SETUP
 
   return router;
 };
