@@ -2,12 +2,13 @@ import * as assert from "assert";
 import * as io from "socket.io-client";
 import * as request from "supertest";
 import { sign } from "jsonwebtoken";
-import { BAD_REQUEST, CREATED } from "http-status-codes";
+import { BAD_REQUEST, CREATED, OK } from "http-status-codes";
 import { Application } from "../app/application.types";
 import { TokenConfig } from "../config/config";
 import { appConfig } from "../config/config";
 import { isUuid, isDate } from "../../../../shared/test-utils";
 import { NotificationsRepository } from "../repositories/notifications.repository";
+import { NotificationModel } from "../app/features/notifications/models/notification.model";
 
 const notifyUrl = "http://localhost:30050";
 
@@ -116,31 +117,58 @@ describe("send.action", () => {
     assert(isUuid(body?.notificationsIds[0]));
   });
 
-  it("Should save notification in DB after send", async () => {
-    await request(app).post("/api/notifications/send").send({ message: "123" }).expect(CREATED);
-    const { notifications, total } = await notificationsRepository.getNotifications();
-    const [firstNotification] = notifications;
-
-    assert(isUuid(firstNotification.id));
-    assert(isDate(firstNotification.createdAt));
-    assert.deepStrictEqual(notifications.length, 1);
-    assert.deepStrictEqual(total, 1);
-    assert.deepStrictEqual(firstNotification.channel, "default-all");
-    assert.deepStrictEqual(firstNotification.message, "123");
-  });
-
-  it("Should save many notification with same message and differ channels in DB", async () => {
+  it("Should save many notifications with same message and different channels in DB", async () => {
     await request(app)
       .post("/api/notifications/send")
       .send({ channels: ["test1", "test2", "test3"], message: "123" })
       .expect(CREATED);
-    const { notifications, total } = await notificationsRepository.getNotifications();
 
-    assert.deepStrictEqual(notifications.length, 3);
-    assert.deepStrictEqual(total, 3);
+    const { body } = await request(app).get("/api/notifications/get-notifications").send({}).expect(OK);
+
+    const { notifications, total }: { notifications: NotificationModel[]; total: number } = body;
+
+    assert(notifications.length <= 25);
+    assert(total === 3);
     assert(notifications.every(({ message }) => message === "123"));
     assert(notifications.some(({ channel }) => channel === "test1"));
     assert(notifications.some(({ channel }) => channel === "test2"));
     assert(notifications.some(({ channel }) => channel === "test3"));
+  });
+
+  it("Endpoint get-notifications should returns notifications", async () => {
+    await request(app)
+      .post("/api/notifications/send")
+      .send({ channels: ["test1", "test2", "test3"], message: "123" })
+      .expect(CREATED);
+
+    const { body } = await request(app).get("/api/notifications/get-notifications").expect(OK);
+
+    const { notifications, total }: { notifications: NotificationModel[]; total: number } = body;
+
+    assert(notifications.length <= 25);
+    assert(total === 3);
+    assert(notifications.every(({ message }) => message === "123"));
+    assert(notifications.some(({ channel }) => channel === "test1"));
+    assert(notifications.some(({ channel }) => channel === "test2"));
+    assert(notifications.some(({ channel }) => channel === "test3"));
+  });
+
+  it("Endpoint get-notifications should returns filtered notifications by notification channel", async () => {
+    await request(app)
+      .post("/api/notifications/send")
+      .send({ channels: ["test1", "test2", "test3"], message: "123" })
+      .expect(CREATED);
+
+    const { body } = await request(app)
+      .get("/api/notifications/get-notifications?filter[channel][eq]=test1")
+      .expect(OK);
+
+    const { notifications, total }: { notifications: NotificationModel[]; total: number } = body;
+    const [firstNotification] = notifications;
+
+    assert.strictEqual(notifications.length, 1);
+    assert.strictEqual(total, 1);
+    assert.deepStrictEqual(firstNotification.channel, "test1");
+    assert.deepStrictEqual(firstNotification.message, "123");
   });
 });
